# deno_serverless_aliyun_minimal

./: .gitignore  Makefile  README.md  s.yaml
.github/workflows/: ci.yml
bootstrap/: Cargo.toml  build.rs
bootstrap/src/: fc_runtime.js  main.rs
