[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_core = "0.144"
log = "0.4"
tokio = { version = "1.20", features = ["full"] }

[build-dependencies]
deno_core = "0.144"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z' # Optimize for size
panic = "abort"
strip = "symbols"
